# private_ml

./: Cargo.toml  Dockerfile  README.md
src/: define.rs  dmcfe_ip.rs  lib.rs  quadratic_sgp.rs  simple_ip.rs  traits.rs
src/math/: matrix.rs
src/ml/: disease_prediction.rs  mod.rs  neural_network.rs
src/utils/: mod.rs  rand_utils.rs
src/zk/: dlog.rs  mod.rs  qp.rs  sip.rs
tests/: test_dmcfe_ip.rs  test_nn.rs  test_quadratic_sgp.rs  test_simple_ip.rs  test_utils.rs  test_zk.rs
