[package]
name = "ruby"
version = "0.1.0"
authors = ["Zico <zhicong303@gmail.com>"]
edition = "2018"

[dependencies]
miracl_core = "2.7.0"
lazy_static = "1.4.0"
rand = "0.8.4"
rand_chacha = "0.3.0"
num-traits = "0.2.8"
num-bigint = {version = "0.4.0", features = ["rand"]}
num-integer = "0.1.43"
fawkes-crypto = "4.2.5"
base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
array-init = "2.0.0"
